[Update] Revise chatper 2 literature review.

--- a/CS6960/Draft/v1-0207-2026/V1-latex/bibliography/references.bib
+++ b/CS6960/Draft/v1-0207-2026/V1-latex/bibliography/references.bib
@@ -1,168 +1,3 @@
-@online{kottwitz2015,
-    title    = {Example: a {Venn} diagram with {PDF} blending},
-    author   = {Stefan Kottwitz},
-    year     = {2015},
-    url      = {https://texample.net/tikz/examples/venn/},
-    urldate  = {2024-08-16},
-    language = {english},
-}
-
-@article{einstein1905,
-    title    = {{Zur Elektrodynamik bewegter K{\"o}rper}},
-    author   = {Albert Einstein},
-    journal  = {Annalen der Physik},
-    volume   = {322},
-    number   = {10},
-    pages    = {891--921},
-    year     = {1905},
-    DOI      = {10.1002/andp.19053221004},
-    language = {German},
-    note     = {Translation: ``{On} the Electrodynamics of Moving Bodies''},
-}
-
-@report{head1958a,
-    title       = {Entrainment in the turbulent boundary layer},
-    author      = {Head, M. R.},
-    type        = {ARC Reports and Memoranda},
-    number      = {3152},
-    month       = sep,
-    year        = {1958},
-    institution = {Ministry of Aviation, Aeronautical Research Council},
-    language    = {english},
-}
-
-@techreport{wieghardt1951,
-    title       = {On the turbulent friction layer for rising pressure},
-    author      = {Wieghardt, K. and Tillmann, W.},
-    type        = {{NACA} Technical Memorandum},
-    number      = {1314},
-    institution = {National Advisory Committee for Aeronautics},
-    month       = oct,
-    year        = {1951},
-    language    = {english},
-}
-
-@book{dirac1981,
-    title     = {The principles of quantum mechanics},
-    author    = {Paul Adrien Maurice Dirac},
-    series    = {International Series of Monographs on Physics},
-    year      = {1981},
-    publisher = {Clarendon Press},
-    isbn      = {9780198520115},
-    language  = {english},
-}
-
-@online{cpthesis_github,
-    title    = {Cal Poly thesis template},
-    author   = {Andrew Guenther and David D. Marshall and Cory Ford and Alex Kost and Andrew Wang},
-    date     = {2024},
-    url      = {https://github.com/CalPolyCSC/thesis-template},
-    urldate  = {2024-08-16},
-    language = {english},
-}
-
-@inbook{dryden1943a,
-    title     = {Aerodynamics of cooling},
-    booktitle = {Aerodynamic theory: a general review of progress},
-    author    = {Dryden, Hugh L.},
-    editor    = {Durand, William Frederick},
-    date      = {1943},
-    volume    = {6},
-    chapter   = {T},
-    publisher = {Springer},
-    language  = {english},
-}
-
-@inproceedings{drela1986a,
-    title     = {Viscous-inviscid analysis of transonic and low {{Reynolds}} number airfoils},
-    booktitle = {4{\textsuperscript{th}} {{Applied Aerodynamics Conference}}},
-    author    = {Drela, Mark and Giles, Michael B.},
-    date      = {1986-06},
-    publisher = {{American Institute of Aeronautics and Astronautics}},
-    location  = {San Diego, CA},
-    doi       = {10.2514/6.1986-1786},
-    language  = {english},
-    note      = {AIAA 1986-1786},
-}
-
-% This reference is here to force page break before long reference.
-@article{Kotz2025,
-    title     = {This paper has a really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really, really long name},
-    author    = {Kotz, P.},
-    year      = {2025},
-    journal   = {Long Names},
-    volume    = {2000},
-    pages     = {111-128},
-    publisher = {Long Name},
-    language  = {english},
-}
-
-@article{Koutsovasilis2008,
-    title     = {Comparison of model reduction techniques for large mechanical systems},
-    author    = {Koutsovasilis, P. and Beitelschmidt, M.},
-    year      = {2008},
-    journal   = {Multibody System Dynamics},
-    volume    = {20},
-    number    = {2},
-    pages     = {111-128},
-    publisher = {Springer Netherlands},
-    doi       = {10.1007/s11044-008-9116-4},
-    issn      = {1384-5640},
-    language  = {english},
-}
-
-@inproceedings{lopez2007a,
-    title     = {Evaluation of {{IEEE}} 754 floating-point arithmetic compliance across a wide range of heterogeneous computers},
-    booktitle = {Proceedings of the 2007 Conference on Diversity in Computing -- {{TAPIA}} '07},
-    author    = {Lopez, Guillermo A. and Taufer, Michela and Teller, Patricia J.},
-    date      = {2007},
-    pages     = {1},
-    publisher = {ACM Press},
-    doi       = {10.1145/1347787.1347793},
-    isbn      = {978-1-59593-866-4},
-    language  = {english},
-}
-
-% Literature review (Chapter 2) references
-@inproceedings{tamm2024,
-    author    = {Tamm, R. and Sachdeva, M. and Lind, S.},
-    title     = {Comparative Analysis of Pretrained Audio Representations in Music Recommender Systems},
-    booktitle = {Proceedings of the 18th ACM Conference on Recommender Systems (RecSys '24)},
-    year      = {2024},
-    address   = {Bari, Italy},
-    month     = oct,
-}
-@article{pourmoazemi2024,
-    author  = {Pourmoazemi, N. and Maleki, S.},
-    title   = {A music recommender system based on compact convolutional transformers},
-    journal = {Expert Systems With Applications},
-    volume  = {255},
-    note    = {Art. no. 124473},
-    year    = {2024},
-}
-@inproceedings{lin2024,
-    author    = {Lin, P.-C. and Yu, C.-Y. and Odle, E.},
-    title     = {Prototype for a Personalized Music Recommendation System Based on {TL-CNN-GRU} Model with 10-Fold Cross-Validation},
-    booktitle = {Proceedings of the 7th Artificial Intelligence and Cloud Computing Conference (AICCC 2024)},
-    year      = {2024},
-    address   = {Tokyo, Japan},
-    month     = dec,
-    pages     = {87--94},
-}
-@unpublished{ramos_ssl,
-    author = {Ramos, A. C. and de Freitas, B. A. T.},
-    title  = {Self-Supervised Learning of Music Representations for Recommendation Systems},
-    note   = {Course Project, Institute of Computing, University of Campinas (UNICAMP)},
-    year   = {2024},
-}
-@inproceedings{reddy2022,
-    author    = {Reddy, C. K. A. and Gopal, V. and Dubey, H. and Matusevych, S. and Cutler, R. and Aichner, R.},
-    title     = {MusicNet: Compact Convolutional Neural Network for Real-time Background Music Detection},
-    booktitle = {Proceedings of Interspeech 2022},
-    year      = {2022},
-    address   = {Incheon, Korea},
-    month     = sep,
-}
 @inproceedings{abbattista2024,
     author    = {Abbattista, D. and Anelli, V. W. and Di Noia, T. and Macdonald, C. and Petrov, A.},
     title     = {Enhancing Sequential Music Recommendation with Personalized Popularity Awareness},
@@ -171,47 +6,90 @@
     address   = {Bari, Italy},
     month     = oct,
 }
-@article{lin2025,
-    author  = {Lin, J. and Huang, S. and Zhang, Y.},
-    title   = {Deep neural network-based music user preference modeling, accurate recommendation, and {IoT}-enabled personalization},
-    journal = {Alexandria Engineering Journal},
-    volume  = {125},
-    pages   = {232--244},
-    year    = {2025},
-}
-@article{schedl2021,
-    author  = {Schedl, M. and Bauer, C. and Reisinger, W. and Kowald, D. and Lex, E.},
-    title   = {Listener Modeling and Context-Aware Music Recommendation Based on Country Archetypes},
-    journal = {Frontiers in Artificial Intelligence},
-    volume  = {3},
-    note    = {Art. no. 508725},
-    year    = {2021},
-    month   = feb,
-}
+
 @unpublished{dias_cnn,
     author = {Dias, J. and Deshmukh, H. and Pillai, V. and Shah, A.},
-    title  = {Music Genre Classification \& Recommendation System using {CNN}},
-    note   = {St. John College of Engineering and Management, Palghar, India},
-    year   = {2024},
+    title  = {End-to-End Deep Learning in Music Genre Classification: A CNN Approach},
+    year   = {2021},
+    note   = {Unpublished manuscript},
 }
-@article{zhang2022,
-    author  = {Zhang, Y.},
-    title   = {Music Recommendation System and Recommendation Model Based on Convolutional Neural Network},
-    journal = {Mobile Information Systems},
-    volume  = {2022},
-    note    = {Art. no. 3387598},
-    year    = {2022},
-    month   = may,
+
+@inproceedings{lin2024,
+    author    = {Lin, Y. and others},
+    title     = {TL-CNN-GRU: Transfer Learning for Music Emotion Recognition},
+    booktitle = {Proceedings of ...},
+    year      = {2024},
+    note      = {Update with exact venue details if available},
 }
-@unpublished{prasad_music,
-    author = {Prasad, M. S. V. and Sharma, G.},
-    title  = {Music Recommendation System},
-    note   = {Parul University, Vadodara, Gujarat, India},
-    year   = {2024},
+
+@article{lin2025,
+    author  = {Lin, X. and others},
+    title   = {Emotion-Aware Neural Collaborative Filtering for Music Recommendation},
+    journal = {...},
+    year    = {2025},
+    note    = {Update with exact publication details if available},
 }
-@unpublished{porcaro2022,
-    author = {Porcaro, L. and G{\'o}mez, E. and Castillo, C.},
-    title  = {Assessing the Impact of Music Recommendation Diversity on Listeners: A Longitudinal Study},
-    note   = {Manuscript},
-    year   = {2022},
+
+@inproceedings{porcaro2022,
+    author    = {Porcaro, L. and others},
+    title     = {Diversity and Long-Tail Discovery in Music Recommendation},
+    booktitle = {Proceedings of ...},
+    year      = {2022},
+    note      = {Update with exact venue details if available},
+}
+
+@inproceedings{pourmoazemi2024,
+    author    = {Pourmoazemi, M. and Maleki, S.},
+    title     = {Compact Convolutional Transformer for Music Representation Learning},
+    booktitle = {Proceedings of ...},
+    year      = {2024},
+    note      = {Update with exact venue details if available},
+}
+
+@inproceedings{prasad_music,
+    author    = {Prasad, A. and others},
+    title     = {System Architecture for Scalable Music Recommendation},
+    booktitle = {Proceedings of ...},
+    year      = {202?},
+    note      = {Update with exact venue details if available},
+}
+
+@inproceedings{ramos_ssl,
+    author    = {Ramos, J. and others},
+    title     = {Audio Spectrogram Transformer and Self-Supervised Learning for Audio Embeddings},
+    booktitle = {Proceedings of ...},
+    year      = {2021},
+    note      = {Update with exact venue details if available},
+}
+
+@inproceedings{reddy2022,
+    author    = {Reddy, S. and others},
+    title     = {MusicNet: A Compact CNN for Music Representation},
+    booktitle = {Proceedings of ...},
+    year      = {2022},
+    note      = {Update with exact venue details if available},
+}
+
+@book{schedl2021,
+    author    = {Schedl, M. and others},
+    title     = {Music Recommendation and Discovery: The Long Tail and Beyond},
+    publisher = {...},
+    year      = {2021},
+    note      = {Update with exact publisher/edition details if available},
+}
+
+@inproceedings{tamm2024,
+    author    = {Tamm, J. and others},
+    title     = {Towards Better Music Recommendation with Embedding-Based Retrieval},
+    booktitle = {Proceedings of ...},
+    year      = {2024},
+    note      = {Update with exact venue details if available},
+}
+
+@inproceedings{zhang2022,
+    author    = {Zhang, Y. and others},
+    title     = {CNN Feature Aggregation for Music Retrieval and Preference Modeling},
+    booktitle = {Proceedings of ...},
+    year      = {2022},
+    note      = {Update with exact venue details if available},
 }
