--- a/CS6960/Draft/v1-0207-2026/V1-latex/appendices/outline.tex
+++ b/CS6960/Draft/v1-0207-2026/V1-latex/appendices/outline.tex
@@ -1,15 +1,8 @@
-% If have only one appendix pass the number of appendices, 1,
-% to the appendix command as an optional parameter:
-%\appendix[1]
-% If have multiple appendices can pass the number of appendices
-% to the appendix command as an optional parameter or omit it:
-\appendix[4]
-
-% If do not have an acronym list, this input line can be removed.
-\input{appendices/acronyms}
-
-\input{appendices/appendix01}
-
-\input{appendices/appendix02}
-
-\input{appendices/appendix03}
+% V1.1: All appendices commented out for minimal thesis skeleton.
+% Uncomment the block below to restore appendices.
+%
+% \appendix[4]
+% \input{appendices/acronyms}
+% \input{appendices/appendix01}
+% \input{appendices/appendix02}
+% \input{appendices/appendix03}
