--- a/CS6960/Draft/v1-0207-2026/V1-latex/bibliography/bib_info.tex
+++ b/CS6960/Draft/v1-0207-2026/V1-latex/bibliography/bib_info.tex
@@ -9,7 +9,7 @@
 
 % For a bibliography, put all references you want in your bibliography
 % into your bib-file, then use the following line:
-\nocite{*}
+%\nocite{*}  % Phase 2: disabled so only cited works appear in references
 
 % For a references section use the following line:
 %\renewcommand{\bibname}{References}
