--- a/CS6960/Draft/v1-0207-2026/V1-latex/frontmatter/nomenclature.tex
+++ b/CS6960/Draft/v1-0207-2026/V1-latex/frontmatter/nomenclature.tex
@@ -1,11 +1,2 @@
-% Adapted from Overleaf documentation
-% https://www.overleaf.com/learn/latex/Nomenclatures
-\nomenclature[P]{$c$}{Speed of light in a vacuum}
-\nomenclature[P]{$h$}{Planck constant}
-\nomenclature[P]{$G$}{Gravitational constant}
-\nomenclature[N]{$\mathbb{R}$}{Real numbers}
-\nomenclature[N]{$\mathbb{C}$}{Complex numbers}
-\nomenclature[N]{$\mathbb{H}$}{Quaternions}
-\nomenclature[O]{$V$}{Constant volume}
-\nomenclature[O]{$\mu$}{Friction index}
-\nomenclature[O]{$T$}{\lipsum[1-3]}
+% V1.1: Demo/template nomenclature entries removed for minimal thesis skeleton.
+% Add \nomenclature entries here when needed for the thesis.
