[Update] Revise and created v1 draft with cover page.

--- a/CS6960/Draft/v1-0207-2026/V1-latex/cpthesis.cls
+++ b/CS6960/Draft/v1-0207-2026/V1-latex/cpthesis.cls
@@ -253,7 +253,7 @@
 %                    ~~~~~~~~~~~~~~~
 %
 % campus
-\def\campus{San Luis Obispo}
+\def\campus{Pomona}
 %           ~~~~~~~~~~~~~~~
 %
 %    ****************************************
