--- a/CS6960/Draft/v1-0207-2026/V1-latex/frontmatter/information.tex
+++ b/CS6960/Draft/v1-0207-2026/V1-latex/frontmatter/information.tex
@@ -1,18 +1,11 @@
-\title{Title of Thesis in All Caps, Inverted Pyramid Style if More Than One Line and if More Than Two Lines Then Spacing Needs to be Consistent}
-\author{Your Name}
+\title{COMPARATIVE ANALYSIS OF PRETRAINED AUDIO REPRESENTATIONS FOR SMALL-SCALE MUSIC ARCHIVES: A CASE STUDY ON THE IPALPITI COLLECTION}
+\author{Keita Katsumi}
 \degreemonth{June}
-\degreeyear{2025}
+\degreeyear{2026}
 \degree{Master of Science}
-\field{Your Degree}
-\numberofmembers{4}
-   \chair{Misty Mustang, Ph.D. \linebreak Professor of Animal Science}
-   \othermemberA{Faculty Member, Ph.D. \linebreak Professor of Some Department}
-   \othermemberB{Another Faculty, Ph.D. \linebreak Professor of Some Department}
-   \othermemberC{Outside Advisor \linebreak CTO, External Organization Name}
-   \othermemberD{Awesome Lecturer, M.S. \linebreak Lecturer of Some Department}
-   \othermemberE{Faculty Member, VI, Ph.D. \linebreak Professor of Some Department}
-   \othermemberF{Faculty Member, VII, Ph.D. \linebreak Professor of Some Department}
-   \othermemberG{Faculty Member, VIII, Ph.D. \linebreak Professor of Some Department}
-   \othermemberH{Faculty Member, IX, Ph.D. \linebreak Professor of Some Department}
-   \othermemberI{Faculty Member, X, Ph.D. \linebreak Professor of Some Department}
+\field{Computer Science}
+\numberofmembers{3}
+   \chair{Fatemeh Jamshidi, Ph.D. \linebreak Professor of Computer Science}
+   \othermemberA{Ericsson Santana Marin, Ph.D. \linebreak Professor of Computer Science}
+   \othermemberB{Gilbert Young, Ph.D. \linebreak Professor of Computer Science}
 \keywords{Select descriptive keywords and separate terms with a comma and a space.}
