[Update] Fix grounding check with the claim 2, 3, 6, and 7

--- a/CS6960/Draft/v2-0213-2026/V2-latex/bibliography/references.bib
+++ b/CS6960/Draft/v2-0213-2026/V2-latex/bibliography/references.bib
@@ -54,14 +54,6 @@
     note      = {Update with exact venue details if available},
 }
 
-@inproceedings{ramos_ssl,
-    author    = {Ramos, J. and others},
-    title     = {Audio Spectrogram Transformer and Self-Supervised Learning for Audio Embeddings},
-    booktitle = {Proceedings of ...},
-    year      = {2021},
-    note      = {Update with exact venue details if available},
-}
-
 @inproceedings{reddy2022,
     author    = {Reddy, S. and others},
     title     = {MusicNet: A Compact CNN for Music Representation},
@@ -92,4 +84,11 @@
     booktitle = {Proceedings of ...},
     year      = {2022},
     note      = {Update with exact venue details if available},
+}
+
+@inproceedings{gong2021ast,
+  title={AST: Audio Spectrogram Transformer},
+  author={Gong, Yuan and Chung, Yu-An and Glass, James},
+  booktitle={arXiv preprint arXiv:2104.01778},
+  year={2021}
 }
