[Update] chapter 2 section 1 adding 2 urvay papers.

--- a/CS6960/Draft/v2-0213-2026/V2-latex/bibliography/references.bib
+++ b/CS6960/Draft/v2-0213-2026/V2-latex/bibliography/references.bib
@@ -71,10 +71,53 @@
     note      = {Update with exact venue details if available},
 }
 
+@article{gong2021ast,
+  author  = {Gong, Yuan and Chung, Yu-An and Glass, James},
+  title   = {AST: Audio Spectrogram Transformer},
+  journal = {arXiv preprint arXiv:2104.01778},
+  year    = {2021}
+}
 
-@inproceedings{gong2021ast,
-  title={AST: Audio Spectrogram Transformer},
-  author={Gong, Yuan and Chung, Yu-An and Glass, James},
-  booktitle={arXiv preprint arXiv:2104.01778},
-  year={2021}
+
+@inproceedings{krichene2020,
+  author    = {Walid Krichene and Steffen Rendle},
+  title     = {On Sampled Metrics for Item Recommendation},
+  booktitle = {Proceedings of the 26th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD '20)},
+  year      = {2020},
+  pages     = {1748--1757},
+  publisher = {ACM},
+  address   = {Virtual Event, CA, USA},
+  doi       = {10.1145/3394486.3403226}
+}
+
+
+@inproceedings{canamares2020,
+  author    = {Roc{\'i}o Cañamares and Pablo Castells},
+  title     = {On Target Item Sampling in Offline Recommender System Evaluation},
+  booktitle = {Proceedings of the 14th ACM Conference on Recommender Systems (RecSys '20)},
+  year      = {2020},
+  pages     = {259--268},
+  publisher = {ACM},
+  address   = {Virtual Event, Brazil},
+  doi       = {10.1145/3383313.3418478}
+}
+
+@article{zaman2023,
+  author  = {Zaman, K. and Sah, M. and Direkoglu, C. and Unoki, M.},
+  title   = {A Survey of Audio Classification Using Deep Learning},
+  journal = {IEEE Access},
+  volume  = {11},
+  pages   = {102345--102381},
+  year    = {2023},
+  doi     = {10.1109/ACCESS.2023.3323451}
+}
+
+@article{jiang2024,
+  author  = {Jiang, X. and Zhang, Y. and Lin, G. and Yu, L.},
+  title   = {Music Emotion Recognition Based on Deep Learning: A Review},
+  journal = {IEEE Access},
+  volume  = {12},
+  pages   = {157716--157745},
+  year    = {2024},
+  doi     = {10.1109/ACCESS.2024.10729262}
 }
