[Update] Fixed Literature reivew.

--- a/CS6960/Draft/v2-0213-2026/V2-latex/bibliography/references.bib
+++ b/CS6960/Draft/v2-0213-2026/V2-latex/bibliography/references.bib
@@ -121,3 +121,15 @@
   year    = {2024},
   doi     = {10.1109/ACCESS.2024.10729262}
 }
+
+@inproceedings{chen2023beats,
+  author    = {Chen, Sanyuan and Wu, Yu and Wang, Chengyi and Liu, Shujie 
+               and Tompkins, Daniel and Chen, Zhuo and Che, Wanxiang 
+               and Yu, Xiangzhan and Wei, Furu},
+  title     = {BEATs: Audio Pre-Training with Acoustic Tokenizers},
+  booktitle = {Proceedings of the 40th International Conference on Machine Learning (ICML)},
+  series    = {Proceedings of Machine Learning Research},
+  volume    = {202},
+  year      = {2023},
+  publisher = {PMLR}
+}
